--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "ps_n",
@@ -50,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "c_user",
@@ -86,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "xs",
@@ -95,34 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
+    },
+    {
+        "key": "pas",
+        "value": "61575070664257%3A4l6PBXUCug",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWf4SV1zc5U0ReoViqseHRHb-iCUDbul5oFN1CMElVS4AK1zNeM.Bn_fCK..AAA.0.0.BoX6-H.AWdMF8vf-O0RYI9U0_hZIuGKiVw",
+        "value": "0MmXGi5OoGPsKoWdq.AWetMn3aTAw-hlKEwuUvvdwr5Att2IKKEsJs4JLG6mU5Y28PN3w.Bn_fCK..AAA.0.0.BoaEiQ.AWf5TYD1d4W5lMJbypPGTcWO71g",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "fbl_st",
-        "value": "101021508%3BT%3A29185022",
+        "value": "101228331%3BT%3A29194413",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2856%3Btimestamp%3A1751101319",
+        "value": "v2%3Bclient_version%3A2860%3Btimestamp%3A1751664784",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-28T09:02:29.611Z",
-        "lastAccessed": "2025-06-28T09:02:29.611Z"
+        "creation": "2025-07-04T21:33:13.581Z",
+        "lastAccessed": "2025-07-04T21:33:13.581Z"
     }
 ]
