--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "pas",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "locale",
@@ -86,52 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWcPpUPuFvLu96bjXGZFj54EE4KDntItf2rtbxZWNloymTKJ3og.Bn_fCK..AAA.0.0.BocGwg.AWf9qrcAhkLnzpik8QDHSjab_J0",
+        "value": "0MmXGi5OoGPsKoWdq.AWeY2d0fuFhJ1Sv9p7jy9hl3JwBzDZhlA9CRns8yzT14RH5BRbA.Bn_fCK..AAA.0.0.Bocn_H.AWfCoBeVqM5sMM4aY9iF-1U7Ows",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "fbl_st",
-        "value": "101028652%3BT%3A29203302",
+        "value": "101323417%3BT%3A29205571",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2865%3Btimestamp%3A1752198176",
+        "value": "v2%3Bclient_version%3A2867%3Btimestamp%3A1752334279",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-11T01:43:10.541Z",
-        "lastAccessed": "2025-07-11T01:43:10.541Z"
+        "creation": "2025-07-12T15:31:31.835Z",
+        "lastAccessed": "2025-07-12T15:31:31.835Z"
     }
 ]
