--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%22KY2VtlQB%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "ps_n",
@@ -50,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575070664257",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
-    },
-    {
-        "key": "xs",
-        "value": "29%3AYL8m3cY277_Ofw%3A2%3A1751101317%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
-    },
-    {
-        "key": "pas",
-        "value": "61575070664257%3A4l6PBXUCug",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "locale",
@@ -86,34 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61578497695280",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
+    },
+    {
+        "key": "xs",
+        "value": "46%3A4Iyz-LBjr4C8Xw%3A2%3A1752484415%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWeY2d0fuFhJ1Sv9p7jy9hl3JwBzDZhlA9CRns8yzT14RH5BRbA.Bn_fCK..AAA.0.0.Bocn_H.AWfCoBeVqM5sMM4aY9iF-1U7Ows",
+        "value": "0MmXGi5OoGPsKoWdq.AWdJ6gPDkXI6HFZ_-1KaHGbyIVsvhFnWeFmkX9iB9EkCu4yZg44.Bn_fCK..AAA.0.0.BodMpD.AWc8qaLdXgBcUighZPvZSfprnKI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
+    },
+    {
+        "key": "pas",
+        "value": "61575070664257%3A4l6PBXUCug%2C61578497695280%3Ag59XZrUnXe",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "fbl_st",
-        "value": "101323417%3BT%3A29205571",
+        "value": "100731994%3BT%3A29208073",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2867%3Btimestamp%3A1752334279",
+        "value": "v2%3Bclient_version%3A2868%3Btimestamp%3A1752484419",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-12T15:31:31.835Z",
-        "lastAccessed": "2025-07-12T15:31:31.835Z"
+        "creation": "2025-07-14T09:15:09.773Z",
+        "lastAccessed": "2025-07-14T09:15:09.773Z"
     }
 ]
