--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%22KY2VtlQB%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%22mxrjGpgo%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "locale",
@@ -59,53 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61578497695280",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
-    },
-    {
-        "key": "xs",
-        "value": "46%3A4Iyz-LBjr4C8Xw%3A2%3A1752484415%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdJ6gPDkXI6HFZ_-1KaHGbyIVsvhFnWeFmkX9iB9EkCu4yZg44.Bn_fCK..AAA.0.0.BodMpD.AWc8qaLdXgBcUighZPvZSfprnKI",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "pas",
@@ -113,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100731994%3BT%3A29208073",
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61578497695280",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
+    },
+    {
+        "key": "xs",
+        "value": "38%3AXeLIVhV3EOwW5A%3A2%3A1752489952%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWeygiBU4ikadmSpu07BSjQIzUkd9zxoc5D_5gC8wMh6ceL_4Sk.Bn_fCK..AAA.0.0.BodN_n.AWewuFW0DFapfbR8aSTHf-iILZQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2868%3Btimestamp%3A1752484419",
+        "value": "v2%3Bclient_version%3A2868%3Btimestamp%3A1752489959",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-14T09:15:09.773Z",
-        "lastAccessed": "2025-07-14T09:15:09.773Z"
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100727534%3BT%3A29208166",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-14T10:46:04.984Z",
+        "lastAccessed": "2025-07-14T10:46:04.984Z"
     }
 ]
